sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Payment__c/Special_Procurement_Payment__c.object-meta.xml
<CustomObject>
    <description>Special Payment Request Payments</description>
    <label>Special Payment Request Payment</label>
    <nameField>
        <displayFormat>SPRP-{0000000}</displayFormat>
        <label>Special Procurement Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Payment Request Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>