sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Payment__c/fields/Balance_Carry_Forward_SPR__c.field-meta.xml
<CustomField>
    <fullName>Balance_Carry_Forward_SPR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Balance Carry Forward SPR</description>
    <inlineHelpText>Balance Carry Forward SPR</inlineHelpText>
    <label>Balance Carry Forward SPR</label>
    <referenceTo>Special_Procurement__c</referenceTo>
    <relationshipLabel>Special Payment Request Payments (Balance Carry Forward SPR)</relationshipLabel>
    <relationshipName>Special_Payment_Request_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>