sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Payment__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipName>Special_Procurement_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>