sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Payment__c/fields/EPR__c.field-meta.xml
<CustomField>
    <fullName>EPR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EPR</label>
    <referenceTo>Electronic_Payment_Request__c</referenceTo>
    <relationshipName>Special_Procurement_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>