sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Payment__c/fields/EPR_Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>EPR_Gross_Value__c</fullName>
    <description>EPR Gross Payment Amount</description>
    <formula>EPR__r.Gross_Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EPR Gross Payment Amount</inlineHelpText>
    <label>EPR Gross Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>