sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Payment__c/fields/Payment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Payment_Cost__c</fullName>
    <label>Payment Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>