sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <formula>TEXT( EPR__r.Payment_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>