sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Payment__c/fields/Special_Procurement__c.field-meta.xml
<CustomField>
    <fullName>Special_Procurement__c</fullName>
    <label>Special Procurement</label>
    <referenceTo>Special_Procurement__c</referenceTo>
    <relationshipName>Special_Procurement_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>