sfSandBoxCode/force-app/main/default/objects/Special_Procurement_Payment__c/fields/Total_EPR__c.field-meta.xml
<CustomField>
    <fullName>Total_EPR__c</fullName>
    <label>Total Approved EPR Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>